dev/test_programs/INVALID/group1/typedec3.go
package main;

type (
	point struct{
		x int = 4;
	}
)
